--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="image_src" href="%PUBLIC_URL%/homepage.png">
+    <meta property="og:url" content="https://sbcreativelab.com/" />
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="SB Creative Lab" />
+    <meta property="og:description" content="Building an inclusive design community at UC Santa Barbara by providing opportunities and resources for student designers." />
+    <meta name="image" property="og:image" content="https://sbcreativelab.com/homepage.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
