--- a/public/index.html
+++ b/public/index.html
@@ -4,17 +4,17 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <link rel="image_src" href="%PUBLIC_URL%/homepage.png">
-  <meta property="og:url" content="https://sbcreativelab.com/" />
+  <link rel="image_src" href="%PUBLIC_URL%/designathon-homepage.png">
+  <meta property="og:url" content="https://designathon.sbcreativelab.com/" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="SB Creative Lab" />
+  <meta property="og:title" content="2021: Spring into Designathon - April 9 - 11" />
   <meta property="og:description"
-    content="Building an inclusive design community at UC Santa Barbara by providing opportunities and resources for student designers." />
-  <meta name="image" property="og:image" content="https://sbcreativelab.com/homepage.png" />
+    content="SB Creative Lab presents its 2021 Spring Designathon! Get hands-on design experience, work with your friends to win cool prizes, and learn from industry professionals." />
+  <meta name="image" property="og:image" content="https://sbcreativelab.com/designathon-homepage.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description"
-    content="Building an inclusive design community at UC Santa Barbara by providing opportunities and resources for student designers." />
+    content="SB Creative Lab presents its 2021 Spring Designathon! Get hands-on design experience, work with your friends to win cool prizes, and learn from industry professionals." />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
