metadata image fix

--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <link rel="image_src" href="%PUBLIC_URL%/designathon-homepage.png">
+  <link rel="image_src" href="%PUBLIC_URL%/designathon-homepage.JPG">
   <meta property="og:url" content="https://designathon.sbcreativelab.com/" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="2021: Spring into Designathon - April 9 - 11" />
   <meta property="og:description"
     content="SB Creative Lab presents its 2021 Spring Designathon! Get hands-on design experience, work with your friends to win cool prizes, and learn from industry professionals." />
-  <meta name="image" property="og:image" content="https://sbcreativelab.com/designathon-homepage.png" />
+  <meta name="image" property="og:image" content="https://designathon.sbcreativelab.com/designathon-homepage.JPG" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description"
